Fixed flexbox issue on safari

--- a/assets/sass/site/_common-structure.scss
+++ b/assets/sass/site/_common-structure.scss
@@ -305,7 +305,7 @@ body {
 			text-align: left;
 		}
 		@media screen and (min-width: $midwidth) {
-			width: 25%;
+			width: 24.95%;
 			padding: 0 15px;
 		}
 	}
